# glm

./: README.md  SME0823 Avaliação 2.ipynb  sneeze4.csv
src/supervised/: pyproject.toml
src/supervised/supervised/: __init__.py
src/supervised/supervised.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/supervised/supervised/describe/: __init__.py  plots.py  summary.py
